<resources>
    <string name="app_name">AndroidBitmapEffects</string>

    <string name="normal">Default</string>
    <string name="invert">Invert</string>
    <string name="flip">Flip</string>
    <string name="grayscale">Grayscale</string>
    <string name="reflection">Reflection</string>

    <string name="blur">Blur</string>
    <string name="centerCrop">Center Crop</string>
    <string name="sepia">Sepia</string>
    <string name="glow">Glow</string>
    <string name="rounded_corners">Rounded Corners</string>

    <string name="sketch">Sketch</string>
</resources>
